--- a/themes/butterfly/source/css/_layout/footer.styl
+++ b/themes/butterfly/source/css/_layout/footer.styl
@@ -1,23 +1,28 @@
 #footer
   position: relative
-  background-color: $light-blue
-  background-attachment: scroll
+  background: $light-blue
+  background-attachment: local
   background-position: bottom
   background-size: cover
+  background: transparent !important;
 
   if hexo-config('footer_bg') != false
     &:before
       position: absolute
       width: 100%
       height: 100%
-      background-color: alpha($dark-black, .5)
+      background-color: alpha($dark-black, .1) 
       content: ''
 
 #footer-wrap
-  position: relative
-  padding: 40px 20px
+  position: absolute
+  padding: 1.2rem 1rem 1.4rem
   color: var(--light-grey)
   text-align: center
+  left: 0
+  right: 0
+  top: 0
+  bottom: 0
 
   a
     color: var(--light-grey)
@@ -26,10 +31,10 @@
       text-decoration: underline
 
   .footer-separator
-    margin: 0 4px
+    margin: 0 .2rem
 
   .icp-icon
     padding: 0 4px
-    max-height: 1.4em
-    width: auto
     vertical-align: text-bottom
+    max-height: 1.4em
+    width auto
