--- a/source/next/css/main.css
+++ b/source/next/css/main.css
@@ -2728,7 +2728,7 @@ header.header {
   transition: all 0.2s ease-in-out;
 }
 .links-of-author a::before {
-  background: #ff5553;
+  background: #8f25f1;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
