计网刷题笔记

--- a/study_notes/source/_data/styles.styl
+++ b/study_notes/source/_data/styles.styl
@@ -1,3 +1,42 @@
+body {
+    background: url(https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA859bd5804e0cdcd4d100eb9db55b5a24.png);
+    background-repeat: no-repeat;
+    background-attachment:fixed; //不重复
+    background-size: cover;      //填充
+    background-position:50% 50%;
+}
+
+//文章背板的颜色rgb
+.main-inner > .sub-menu, .main-inner > .post-block, .main-inner > .tabs-comment, .main-inner > .comments, .main-inner > .pagination{
+	background: rgba(255,255,255,0.9);
+  padding: 30px;
+  border-radius: 30px;
+}
+
+.post-block{
+  margin-bottom: 40px;
+}
+
+//侧边框的透明度设置
+.sidebar {
+  opacity: 0.9;
+}
+
+//菜单栏的调色
+.header-inner {		
+  background: rgba(255,255,255,0.7);
+}
+
+//搜索框透明
+.popup {		
+  opacity: 0.9;
+}
+
+.main-inner {
+    background-color: rgba(255, 255, 255, 0);  //主体背景透明
+    padding: 0px 40px 40px 40px;  //调整组件位置
+}
+
 // toggle hider title
 .hider_title {
     cursor: pointer;
