--- a/themes/butterfly/layout/includes/mixins/article-sort.pug
+++ b/themes/butterfly/layout/includes/mixins/article-sort.pug
@@ -19,5 +19,23 @@ mixin articleSort(posts)
           .article-sort-item-time
             i.far.fa-calendar-alt
             time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))= date(article.date, config.date_format)
-          a.article-sort-item-title(href=url_for(article.path) title=title)= title
+            a.article-sort-item-title(href=url_for(article.path) title=title)= title
+          .article-meta-wrap
+            if (theme.post_meta.page.categories && article.categories.data.length > 0)
+              span.article-sort-item-categories
+                i.fa-sharp-duotone.fa-solid.fa-dice-d6 
+                each item, index in article.categories.data
+                    a(href=url_for(item.path)).article-meta__categories #[='  ' + item.name]
+                    if (index < article.categories.data.length - 1)
+                      i.fas.fa-angle-right
+            br
+            if (theme.post_meta.page.tags && article.tags.data.length > 0)
+              span.article-sort-item-tags
+                i.fa-solid.fa-tags 
+                each item, index in article.tags.data
+                    a(href=url_for(item.path)).article-meta__tags #[='  ' + item.name]
+                    if (index < article.tags.data.length - 1)
+                        span.article-meta__link #[=' • ']
+            .article-sort-item-time
+              time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))= date(article.date, config.date_format)
     - })
